<?xml version="1.0" encoding="UTF-8"?>
<!--

    Licensed to the Apache Software Foundation (ASF) under one or more
    contributor license agreements.  See the NOTICE file distributed with
    this work for additional information regarding copyright ownership.
    The ASF licenses this file to You under the Apache License, Version 2.0
    (the "License"); you may not use this file except in compliance with
    the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.superbiz</groupId>
  <artifactId>mp-jwt-moviefun</artifactId>
  <version>1.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>REST Microprofile-JWT</name>

  <scm>
    <connection>scm:git:git@github.com:tomitribe/microservice-with-jwt-and-microprofile.git</connection>
    <developerConnection>scm:git:git@github.com:tomitribe/microservice-with-jwt-and-microprofile.git</developerConnection>
    <url>scm:git:git@github.com:tomitribe/microservice-with-jwt-and-microprofile.git</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tomee.version>8.0.0-M2</tomee.version>
    <version.shrinkwrap.resolver>2.0.0</version.shrinkwrap.resolver>
    <mp-jwt.version>1.0</mp-jwt.version>
    <mp-config.version>1.2</mp-config.version>
  </properties>

  <build>
    <defaultGoal>install</defaultGoal>
    <finalName>moviefun</finalName>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <reuseForks>false</reuseForks>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.tomee.maven</groupId>
        <artifactId>tomee-maven-plugin</artifactId>
        <version>${tomee.version}</version>
        <configuration>
          <tomeeClassifier>microprofile</tomeeClassifier>
          <tomeeHttpPort>8181</tomeeHttpPort>
          <tomeeAjpPort>0</tomeeAjpPort>
          <tomeeShutdownPort>0</tomeeShutdownPort>
          <args>-Xmx512m -XX:PermSize=256m</args>
          <config>${project.basedir}/src/main/tomee/</config>
          <synchronization>
            <updateOnlyExtensions>
              <updateOnlyExtension>.html</updateOnlyExtension>
              <updateOnlyExtension>.handlebars</updateOnlyExtension>
              <updateOnlyExtension>.js</updateOnlyExtension>
              <updateOnlyExtension>.less</updateOnlyExtension>
              <updateOnlyExtension>.jcss</updateOnlyExtension>
            </updateOnlyExtensions>
          </synchronization>
          <libs>
            <lib>org.tomitribe:tomitribe-http-signatures:1.3</lib>
            <lib>org.tomitribe:churchkey:0.8</lib>
            <lib>org.tomitribe:tomitribe-util:1.2.3</lib>
          </libs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.tomitribe.tribestream.maven</groupId>
        <artifactId>tribestream-maven-plugin</artifactId>
        <version>1.7</version>
        <configuration>
          <version>1.7</version>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <!-- Override dependency resolver with test version. This must go *BEFORE*
        the Arquillian BOM. -->
      <dependency>
        <groupId>org.jboss.shrinkwrap.resolver</groupId>
        <artifactId>shrinkwrap-resolver-bom</artifactId>
        <version>${version.shrinkwrap.resolver}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <!-- Now pull in our server-based unit testing framework -->
      <dependency>
        <groupId>org.jboss.arquillian</groupId>
        <artifactId>arquillian-bom</artifactId>
        <version>1.0.3.Final</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>javaee-api</artifactId>
      <version>8.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.microprofile.config</groupId>
      <artifactId>microprofile-config-api</artifactId>
      <version>${mp-config.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.microprofile.jwt</groupId>
      <artifactId>microprofile-jwt-auth-api</artifactId>
      <version>${mp-jwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.4</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.nimbusds</groupId>
      <artifactId>nimbus-jose-jwt</artifactId>
      <version>4.23</version>
    </dependency>
    <dependency>
      <groupId>com.github.javafaker</groupId>
      <artifactId>javafaker</artifactId>
      <version>0.15</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>backbonejs</artifactId>
      <version>1.3.3</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>bootstrap</artifactId>
      <version>4.1.0</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>handlebars</artifactId>
      <version>4.0.6</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>jquery</artifactId>
      <version>3.3.1</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>json2</artifactId>
      <version>20140204</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>less</artifactId>
      <version>2.7.2</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>requirejs</artifactId>
      <version>2.3.5</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>requirejs-text</artifactId>
      <version>2.0.15</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>underscorejs</artifactId>
      <version>1.8.3</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>font-awesome</artifactId>
      <version>5.0.10</version>
    </dependency>
    <dependency>
      <groupId>org.webjars.npm</groupId>
      <artifactId>jwt-decode</artifactId>
      <version>2.2.0</version>
    </dependency>
    <dependency>
      <groupId>org.webjars.npm</groupId>
      <artifactId>crypto-js</artifactId>
      <version>3.1.9-1</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>momentjs</artifactId>
      <version>2.22.1</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>backbone-localstorage</artifactId>
      <version>1.1.16</version>
    </dependency>

    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>openejb-cxf-rs</artifactId>
      <version>${tomee.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>openejb-core</artifactId>
      <version>${tomee.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.tomitribe</groupId>
      <artifactId>tomitribe-http-signatures</artifactId>
      <version>1.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.tomitribe</groupId>
      <artifactId>churchkey</artifactId>
      <version>0.8</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.johnzon</groupId>
      <artifactId>johnzon-mapper</artifactId>
      <version>1.1.4</version>
      <scope>provided</scope>
    </dependency>

    <!--
    The <scope>test</scope> guarantees that non of your runtime
    code is dependent on any OpenEJB classes.
    -->

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.shrinkwrap.resolver</groupId>
      <artifactId>shrinkwrap-resolver-depchain</artifactId>
      <type>pom</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>ziplock</artifactId>
      <version>${tomee.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- to make sure the dependency is downloaded for the tomee maven plugin -->
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>apache-tomee</artifactId>
      <version>${tomee.version}</version>
      <scope>test</scope>
      <classifier>microprofile</classifier>
      <type>zip</type>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>arquillian-tomee-embedded</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.apache.tomee</groupId>
          <artifactId>arquillian-tomee-embedded</artifactId>
          <version>${tomee.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.tomee</groupId>
          <artifactId>tomee-embedded</artifactId>
          <version>${tomee.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.tomee</groupId>
          <artifactId>mp-jwt</artifactId>
          <version>${tomee.version}</version>
          <scope>provided</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>arquillian-tomee-remote</id>
      <dependencies>
        <dependency>
          <groupId>org.apache.tomee</groupId>
          <artifactId>arquillian-tomee-remote</artifactId>
          <version>${tomee.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.tomee</groupId>
          <artifactId>apache-tomee</artifactId>
          <version>${tomee.version}</version>
          <type>zip</type>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>backup-node</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.tomee.maven</groupId>
            <artifactId>tomee-maven-plugin</artifactId>
            <version>${tomee.version}</version>
            <configuration>
              <tomeeClassifier>microprofile</tomeeClassifier>
              <tomeeHttpPort>8182</tomeeHttpPort>
              <args>-Xmx512m -XX:PermSize=256m</args>
              <config>${project.basedir}/src/main/tomee/</config>
              <catalinaBase>${project.build.directory}/apache-tomee-backup</catalinaBase>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>copy-resources</id>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <configuration>
                  <outputDirectory>${project.build.directory}/apache-tomee-backup/webapps/moviefun/webapps/</outputDirectory>
                  <resources>
                    <resource>
                      <directory>src/main/tomee-backup</directory>
                      <filtering>true</filtering>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <!--
  This section allows you to configure where to publish libraries for sharing.
  It is not required and may be deleted.  For more information see:
  http://maven.apache.org/plugins/maven-deploy-plugin/
  -->
  <distributionManagement>
    <repository>
      <id>localhost</id>
      <url>file://${basedir}/target/repo/</url>
    </repository>
    <snapshotRepository>
      <id>localhost</id>
      <url>file://${basedir}/target/snapshot-repo/</url>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>tribestream.io</id>
      <name>Tribestream Repository</name>
      <url>https://repository.tribestream.io/signup/maven/</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>tribestream.io</id>
      <name>Tribestream Repository</name>
      <url>https://repository.tribestream.io/signup/maven/</url>
    </pluginRepository>
  </pluginRepositories>
</project>
